src/routes/layout.css
    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200&family=Rajdhani:wght@300&family=Raleway:wght@100&family=Ubuntu+Mono&display=swap');
    :root{
        --main-text-color: #efefef;
        --main-link-color: #efefef;
        --border-radius: 0.4em;
        --grid-gap: 1.0em;
        --statement-color: #8200ff;
        --background: #111;
        --outer-panel-color: #222;

    }
    @keyframes gradient {
        0% {
            background-position: 0% 50%;
        }

        50% {
            background-position: 100% 50%;
        }

        100% {
            background-position: 0% 50%;
        }
    }
    @media only screen and (max-width: 720px) {
        :root{
            --grid-gap: 0.4em;
        }
        .main-content{
            margin-left: var(--grid-gap) !important;
        }
        .function-navigator{
            background-color: #8200FF !important;
            margin: 0 !important;
            position: fixed;
            width: 100vw;
            grid-template-rows: 1fr;
            justify-items: space-around;
            grid-template-columns: repeat(5, 1fr);
            border-radius: 0 !important;
            bottom: 0px;
            left: 0px;
        }
        .function-navigator a span{
            display: none;
        }
        .function-navigator a{
            width: 100%;
            justify-self: center;
            height: 4em;
            width: 4em;
        }
    }

    a{
        font-size: 1em;
        text-decoration: none;
        color: var(--main-link-color);
    }
    .layout-container {
        font-family: 'Ubuntu mono', monospace; 
        height: 100vh;
        background-color: #111;
        background-size: 350% 350%;
        animation: gradient 15s ease infinite;
        display: grid;
        grid-template-columns: max-content 1fr;
        grid-template-rows: max-content 1fr;
    }
    .header{
        padding: 1em;
        margin-bottom: 0 !important;
        grid-column: 1/3;
        grid-row: 1/2;
        display: grid;
        grid-template-columns: max-content 1fr;
        align-items: center;
    }
    .header a{
        margin-left: 2em;
    }
    .logo{
        justify-self: start;
    }
    .session-controls{
        justify-self: end;
    }
    .function-navigator{
        display: grid;
        align-content: flex-start;
        overflow: hidden;
        transition: all 0.4s ease-in-out;
    }
    .function-navigator a svg{
        transition: all 0.4s ease-in-out;
        height: 50%;
    }
    .function-navigator a:hover svg .icon-1{
        stroke: var(--statement-color);
    }
    .function-navigator a:hover svg{
        transform: rotateZ(30deg)
    }
    .function-navigator a svg .icon-1{
        transition: all 0.4s ease-in-out;
    }
    .function-navigator a{
        height: 4em;
        display: grid;
        padding: 0.4em;
        grid-template-rows: 1fr;
        grid-template-columns: min-content 1fr;
        align-items: center;
        justify-items: flex-start;
        font-size: 1em;
        border-radius: var(--border-radius);
        transition: all 0.5s ease-in-out;
    }
    .function-navigator a:hover{
        color: var(--statement-color);
    }
    .main-content{
        padding: 1em;
        margin-left: 0 !important;
        grid-column: 2/3;
        grid-row: 2/3;
    }
    .panel{
        box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
        background-color: var(--outer-panel-color);
        border-radius: var(--border-radius);
        margin: var(--grid-gap);
    }

